# paper-abliteration-not-a-scalpel

./: .gitignore  LICENSE  LICENSE-DATA.md  README.md  pyproject.toml
final_research/: PREREGISTRATION-v2.md  PROVENANCE.md  faq.md
final_research/analysis/: _capbootstrap.out.txt  _common.py  _p2p3.out.txt  capability_bootstrap.py  doubt_lexicon_v2.txt  export_public_snapshot.py  figures.py  p2_p3_prereg.py  tables.py
final_research/paper/: PAPER.md
final_research/paper/arxiv/: paper.tex
final_research/paper/tables/: tab1_disposition.md  tab3_capability.md  tab4_perticker.md
final_research/prompts/: FROZEN.txt  manager_v2.md
src/gielda_uncensored/: __init__.py  cli.py  compare.py  config.py  consensus.py  disposition.py  model_probe.py
src/gielda_uncensored/db/: schema.py  store.py
src/gielda_uncensored/llm/: gemma_client.py
src/gielda_uncensored/pipeline/: adversarial.py  decide.py  decide_v2.py  sweep.py
src/gielda_uncensored/pnl/: compute.py  quotes.py  runner.py
src/gielda_uncensored/reporting/: __init__.py  charts.py  confession.py  embdoubt.py  export.py  lexsens.py  panel.py  portfolio.py  regime.py  report.py  stats.py  xsec.py
src/gielda_uncensored/upstream/: loader.py  select.py
