[project]
name = "gielda-research-uncensored"
version = "0.1.0"
description = "Replay warstwy decyzyjnej gielda-agents (manager+trader) na własnym modelu (gemma4 @ gb10) + PnL benchmark censored vs uncensored."
requires-python = ">=3.11"
dependencies = [
    "gielda-agents",
    "openai>=1.40,<2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "click>=8.1",
    "pydantic-settings>=2.0",
]

[project.scripts]
gielda-unc = "gielda_uncensored.cli:main"

[tool.uv.sources]
# gielda-agents jest READ-ONLY — instalujemy editable, ale NIE modyfikujemy plików.
gielda-agents = { path = "../../gielda-agents", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gielda_uncensored"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
